Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14443

Pressing OK or apply on "Taskbar and Start Menu Properties", in Server 2003 explorer causes it to crash.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.9
    • Shell
    • None

    Description

      1. Copy server 2003's explorer to ReactOS root folder.
      2. Run it as the shell.
      3. Open "Taskbar and Start Menu Properties".
      4. Press either OK or Apply on that dialog.
      5. explorer crashes.

       

      Debug log is attached. I reproduced the bug 10 times, so hopefully that makes it easier to find.

      Attachments

        1. Appcrash_2018-03-08_00-44-05.txt
          17 kB
        2. ErrorText_v2.txt
          216 kB
        3. ErrorText_v3.txt
          139 kB
        4. ErrorText.txt
          203 kB

        Issue Links

          Activity

            People

              ThFabba ThFabba
              Cyber Toon Cyber Toon
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: