[BROWSEUI][SHELL32] Treat OnWinEvent's result parameter as optional. CORE-14443

Windows's explorer can call it with NULL.